linked js to root

--- a/app/templates/loginAcc.html
+++ b/app/templates/loginAcc.html
@@ -20,6 +20,7 @@
     </form>
     <br>
     <a href="/register">Create an Account</a>
+    <script src="../static/js/test.js"></script>
 
 
 </body>
