add and check done

--- a/app/templates/loginAcc.html
+++ b/app/templates/loginAcc.html
@@ -7,7 +7,7 @@
 <body>
     <h3> login: </h3>
 
-    <form action="/auth" method="POST">
+    <form action="/login" method="POST">
         <h4>
             Username:
         </h4>
