home page and init other files

--- a/app/templates/createAcc.html
+++ b/app/templates/createAcc.html
@@ -10,12 +10,12 @@
         <h4>
             Username:
         </h4> 
-        <input type="text" name="username" value="enter a username"> <br>
+        <input type="text" name="username" placeholder="enter a username"> <br>
         
         <h4>
             Password:
         </h4>
-        <input type="text" name="password" value="enter a password"> <br>
+        <input type="text" name="password" placeholder="enter a password"> <br>
         <input type="submit" name="sub1">
     </form>
 
