--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,10 +1,64 @@
 <!DOCTYPE html>
-
-<head>
-    Hellow
-</head>
-
-<body>
+<html>
+  <head>
+    <title>
+    Homepage
+  </title>
+  </head>
+  
+  <body>
+  
+    <nav>
+      <div>
+      
+        <img width="100px" height= "100px" src="https://static.vecteezy.com/system/resources/previews/009/397/811/original/fresh-avocado-clipart-design-illustration-free-png.png"/>
+      </div>
+      <ul>
+      
+        <li>Higher or lower</li>
+        <li>search</li>
+        <li>Leaderboard</li>
+      </ul>
+      <div>
+      
+        <p>
+          <button>
+            Log out
+          </button>
+        </p>
+      </div>
+    </nav>
     
-    There's no place like home!
-</body>
+    <main>
+      <form action="/search" method="POST">
+
+        <input type="text" name="stock" placeholder="stock ticker">
+
+        <button type="submit">
+            Search
+        </button>
+    </form>
+    <br>
+    <button>
+            Play game
+        </button>
+        <div>
+        
+           <div>
+           
+             <h3>
+             
+               Last 5 stocks
+             </h3>
+             <ul>
+               <li>APPLE</li>
+               <li>GOOGLE</li>
+               <li>FACEBOOK</li>
+               <li>AMAZON</li>
+               <li>PIAZZA</li>
+             </ul>
+           </div>
+        </div>
+    </main>
+  </body>
+</html>
