--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -22,9 +22,11 @@
       <div>
       
         <p>
-          <button>
-            Log out
-          </button>
+          <form method="GET" action="/log-out">
+            <button type="submit">
+              Log Out
+            </button>
+          </form>
         </p>
       </div>
     </nav>
@@ -39,9 +41,12 @@
         </button>
     </form>
     <br>
-    <button>
-            Play game
-        </button>
+    <form method="GET" action="/higher-Lower">
+      <button type="submit">
+        Play game
+      </button>
+    </form>
+    
         <div>
         
            <div>
