--- a/app/templates/higherLower.html
+++ b/app/templates/higherLower.html
@@ -22,9 +22,17 @@
       <div>
       
         <p>
-          <button>
-            Log out
-          </button>
+            <form method="GET" action="/log-out">
+                <button type="submit">
+                  Log Out
+                </button>
+              </form>
+
+              <form method="GET" action="/home">
+                <button type="submit">
+                  Home
+                </button>
+              </form>
         </p>
       </div>
     </nav>
