--- a/app/templates/higherLower.html
+++ b/app/templates/higherLower.html
@@ -8,34 +8,7 @@
   
   <body>
   
-    <nav>
-      <div>
-      
-        <img width="100px" height= "100px" src="https://static.vecteezy.com/system/resources/previews/009/397/811/original/fresh-avocado-clipart-design-illustration-free-png.png"/>
-      </div>
-      <ul>
-      
-        <li>Higher or lower</li>
-        <li>search</li>
-        <li>Leaderboard</li>
-      </ul>
-      <div>
-      
-        <p>
-            <form method="GET" action="/log-out">
-                <button type="submit">
-                  Log Out
-                </button>
-              </form>
-
-              <form method="GET" action="/home">
-                <button type="submit">
-                  Home
-                </button>
-              </form>
-        </p>
-      </div>
-    </nav>
+    {% include 'navbar.html' %}
     
     <main>
        <p>
