--- a/app/templates/loginAcc.html
+++ b/app/templates/loginAcc.html
@@ -17,6 +17,7 @@
         </h4>
         <input type="text" name="password" placeholder="enter a password"> <br>
         <input type="submit" name="sub1">
+        {{error}}
     </form>
     <br>
     <a href="/register">Create an Account</a>
