--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -4,7 +4,7 @@
 <nav class="navbar navbar-expand-lg">
   <div class="container">
 
-    <a class="navbar-brand" href="#">
+    <a class="navbar-brand" href="home">
       <img class="logo" src="https://static.vecteezy.com/system/resources/previews/009/397/811/original/fresh-avocado-clipart-design-illustration-free-png.png" />
       The Guac Fund
     </a>
@@ -25,8 +25,8 @@
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
 
-            <li><a class="dropdown-item" href="#">Play Game</a></li>
-            <li><a class="dropdown-item" href="#">Leaderboard</a></li>
+            <li><a class="dropdown-item" href="higher-Lower">Play Game</a></li>
+            <li><a class="dropdown-item" href="leaderboard">Leaderboard</a></li>
 
           </ul>
         </li>
