--- a/app/templates/createAcc.html
+++ b/app/templates/createAcc.html
@@ -2,25 +2,63 @@
 <html>
 <head>
     <title>Create Account</title>
+    <link rel="stylesheet" href="../static/css/global.css">
 </head>
 <body>
-    <h3> Create Account: </h3>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+<section class="vh-100" style="background-color: #C15C37;">
+  <div class="container py-5 h-100">
+    <div class="row d-flex justify-content-center align-items-center h-100">
+      <div class="col col-xl-10">
+        <div class="card" style="border-radius: 1rem;">
+          <div class="row g-0">
+            <div class="col-md-6 col-lg-5 d-none d-md-block">
+              <img src="https://www.jessicagavin.com/wp-content/uploads/2019/04/avocados-3.jpg" alt="login form" style="border-radius: 1rem 0 0 1rem;" width="100%" height="100%" />
+            </div>
+            <div class="col-md-6 col-lg-7 d-flex align-items-center">
+              <div class="card-body p-4 p-lg-5 text-black">
 
-    <form action="/register" method="POST">
-        <h4>
-            Username:
-        </h4> 
-        <input type="text" name="username" placeholder="enter a username"> <br>
-        
-        <h4>
-            Password:
-        </h4>
-        <input type="text" name="password" placeholder="enter a password"> <br>
-        <input type="submit" name="sub1">
-    </form>
+                <form action="/register" method="POST">
 
-    <br>
-    <a href="/login">Login</a>
+                  <div class="d-flex align-items-center mb-3 pb-1">
+                    <img class="m-1" src="https://static.vecteezy.com/system/resources/previews/009/397/811/original/fresh-avocado-clipart-design-illustration-free-png.png" width="30px" />
+                    <span class="h1 fw-bold mb-0">
+
+                      The Guac Fund
+                    </span>
+                  </div>
+
+                  <h5 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Create an account</h5>
+
+                  <div class="form-outline mb-4">
+                    <label class="form-label" for="form2Example17">Username</label>
+                    <input type="text" name="username" placeholder="enter a username" class="form-control form-control-lg" />
+
+                  </div>
+
+                  <div class="form-outline mb-4">
+                    <label class="form-label" for="form2Example27">Password</label>
+                    <input type="text" name="password" placeholder="enter a password" class="form-control form-control-lg" />
+
+                  </div>
+
+                  <div class="pt-1 mb-4">
+                    <button class="btn btn-primary btn-lg " type="button">Register</button>
+                  </div>
+
+                  <p class="mb-5 pb-lg-2" style="color: #356211;">Have an account already? <a href="/login" style="color: #356211;">Login here</a></p>
+                </form>
+
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
 
 </html>
