--- a/app/static/css/global.css
+++ b/app/static/css/global.css
@@ -7,11 +7,17 @@ Maroon- #C15C37
 Dark Maroon- #AA471F
 */
 
+
+
 .logo {
     height: 25px;
 }
   
-html, body, nav {
+nav {
+  background: #558303;
+}
+
+html, body {
     background: #F2E880;
 }
 
@@ -30,9 +36,10 @@ p {
 }
 
 .btn-primary {
-    background: #6C8F32 !important;
+    background: #AA471F !important;
+    border: 1px solid black !important;
 }
   
 .btn-primary:hover {
-    background: #AA471F !important;
+    background: #6C8F32 !important;
 }
