--- a/app/templates/createAcc.html
+++ b/app/templates/createAcc.html
@@ -43,7 +43,7 @@
                   </div>
 
                   <div class="pt-1 mb-4">
-                    <button class="btn btn-primary btn-lg " type="button">Register</button>
+                    <button class="btn btn-primary btn-lg " type="submit">Register</button>
                   </div>
 
                   <p class="mb-5 pb-lg-2" style="color: #356211;">Have an account already? <a href="/login" style="color: #356211;">Login here</a></p>
