--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -4,7 +4,7 @@
 <nav class="navbar navbar-expand-lg">
   <div class="container">
 
-    <a class="navbar-brand" href="home">
+    <a class="navbar-brand brown" href="home">
       <img class="logo" src="https://static.vecteezy.com/system/resources/previews/009/397/811/original/fresh-avocado-clipart-design-illustration-free-png.png" />
       The Guac Fund
     </a>
@@ -14,26 +14,34 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="home">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Search</a>
+          <a class="nav-link active brown" aria-current="page" href="/home">Home</a>
         </li>
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+          <a class="nav-link dropdown-toggle brown" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Higher or Lower
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
 
-            <li><a class="dropdown-item" href="higher-Lower">Play Game</a></li>
-            <li><a class="dropdown-item" href="leaderboard">Leaderboard</a></li>
+            <li><a class="dropdown-item brown" href="higher-Lower">Play Game</a></li>
+            <li><a class="dropdown-item brown" href="leaderboard">Leaderboard</a></li>
 
           </ul>
+          
+        </li>
+        <li class="nav-item">
+          <a class="nav-link brown" aria-current="page" href="/logout">Log Out</a>
         </li>
 
+        
+
       </ul>
-      <button type="button" class="btn btn-outline-primary">Log Out</button>
+      <form class="form-inline my-2 my-lg-0" action="/search" method="POST">
+        <input class="form-control-sm mr-sm-2" type="stock" placeholder="Stock Ticker" aria-label="Search">
+        <button class="btn btn-primary my-2 my-sm-0 brown" type="submit">Search</button>
+    </form>
+
     </div>
+    
   </div>
 </nav>
 
