got apis to work

--- a/app/templates/higherLower.html
+++ b/app/templates/higherLower.html
@@ -26,10 +26,10 @@
          
          <div>
                   <p>
-           Apple during the 6 month period starting from 11/18/18
+           {{stock}} during the 6 month period starting from 11/18/18
          </p>
            <img width="100px" height= "100px" src="https://techcrunch.com/wp-content/uploads/2012/11/apple-stock1.jpg"/>
-
+           <img width="100px" height= "100px" src={{logo}} />
 
       </div>
 
