--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -29,7 +29,7 @@
           
         </li>
         <li class="nav-item">
-          <a class="nav-link brown" aria-current="page" href="/logout">Log Out</a>
+          <a class="nav-link brown" aria-current="page" href="/log-out">Log Out</a>
         </li>
 
         
