--- a/app/templates/higherLower.html
+++ b/app/templates/higherLower.html
@@ -1,45 +1,105 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>
-    Homepage
-  </title>
+
+  <head>
+    <title>
+      Homepage
+    </title>
   </head>
-  
+
   <body>
-  
-    {% include 'navbar.html' %}
-    
-    <main>
-       <p>
-         Which is higher?
-       </p>
-       <div>
-         <div>
-           <p>
-             Avocados in houston during the 6 month period starting from 11/18/18
-           </p>
-         
-           <img width="100px" height= "100px" src="https://ih1.redbubble.net/image.2140926795.0280/st,small,845x845-pad,1000x1000,f8f8f8.jpg"/>
-         
-         </div>
-         
-         <div>
-                  <p>
-           {{stock}} during the 6 month period starting from 11/18/18
-         </p>
-           <img width="100px" height= "100px" src="https://techcrunch.com/wp-content/uploads/2012/11/apple-stock1.jpg"/>
-           <img width="100px" height= "100px" src={{logo}} />
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link rel="stylesheet" href="../static/css/global.css">
+
+    <nav class="navbar navbar-expand-lg">
+      <div class="container">
+
+        <a class="navbar-brand " href="home">
+          <img class="logo" src="https://static.vecteezy.com/system/resources/previews/009/397/811/original/fresh-avocado-clipart-design-illustration-free-png.png" />
+          The Guac Fund
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active brown" aria-current="page" href="/home">Home</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle brown" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Higher or Lower
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+
+                <li><a class="dropdown-item brown" href="higher-Lower">Play Game</a></li>
+                <li><a class="dropdown-item brown" href="leaderboard">Leaderboard</a></li>
+
+              </ul>
+
+            </li>
+            <li class="nav-item">
+              <a class="nav-link brown" aria-current="page" href="/logout">Log Out</a>
+            </li>
+
+
+
+          </ul>
+          <form class="form-inline my-2 my-lg-0" action="/search" method="POST">
+            <input class="form-control-sm mr-sm-2" type="stock" placeholder="Stock Ticker" aria-label="Search">
+            <button class="btn btn-primary my-2 my-sm-0 brown" type="submit">Search</button>
+          </form>
+
+        </div>
 
       </div>
+    </nav>
 
 
-    </div>
-    <div id="chart" style="border: 1px solid black; width: 600px; height: 100px;">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+
+    <main class="container">
+      <h1 class="mt-3 dark-maroon">
+        Which asset appreciated more?
+      </h1>
+      <p>
+        11/18/18 -> 1/18/19
+      </p>
 
 
-    </div>
+      <div class="d-inline-flex w-100" style="height: 60vh">
+        
+        <div style="background-image: url(https://ih1.redbubble.net/image.2140926795.0280/st,small,845x845-pad,1000x1000,f8f8f8.jpg); background-size: 100%;" class="w-50 d-flex justify-content-center align-items-center images" onclick="drawChart()">
+          <h1 class="dark-green">
+            INSERT TYPE OF AVOCADO - EX: HOUSTON AVOCADOS
+          </h1>
 
-  </main>
-</body>
+
+        </div>
+
+        <div class="px-3 d-flex justify-content-center align-items-center">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/7/70/Street_Fighter_VS_logo.png" width=75px height= 75px/>
+        </div>
+        <div style="background-image: url({{logo}}); background-size: 100%;" class="w-50 d-flex justify-content-center align-items-center images" onclick="drawChart()">
+        
+          <h1 class="dark-green">
+            INSERT COMPANY NAME HERE
+          </h1>
+
+
+
+        </div>
+
+
+      </div>
+      <div style="height: 20vh;" class="container my-4" id="curve_chart">
+
+
+      </div>
+      
+    </main>
+    <script src="../static/js/higher-lower.js"></script>
+  </body>
+
 </html>
