--- a/app/static/css/global.css
+++ b/app/static/css/global.css
@@ -53,3 +53,10 @@ html, body, container {
   cursor: pointer
 }
 
+#main-chart {
+  height: 300px; 
+}
+
+#secondary-charts div {
+  height: 300px;
+}
