--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -7,41 +7,47 @@
   </head>
   
   <body>
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+    
     {% include 'navbar.html' %}
     
     <main>
-      <form action="/search" method="POST">
-
-        <input type="text" name="stock" placeholder="stock ticker">
-
-        <button type="submit">
-            Search
-        </button>
-    </form>
-    <br>
-    <form method="GET" action="/higher-Lower">
-      <button type="submit">
-        Play game
-      </button>
-    </form>
-    
-        <div>
+      <div class="container pt-2">
+        <h1>
+          Welcome, User
+        </h1>
         
-           <div>
+        <select name="place" id="place">
+          <option value="volvo">Houston</option>
+          <option value="audi">New York</option>
+        </select>
+        
+        <select name="convention" id="convention">
+          <option value="volvo">Organic</option>
+          <option value="audi">Non-organic</option>
+        </select>
+        
+        <h2>
+          
+        </h2>
+        <div class="container" id="main-chart">
            
-             <h3>
-             
-               Last 5 stocks
-             </h3>
-             <ul>
-               <li>APPLE</li>
-               <li>GOOGLE</li>
-               <li>FACEBOOK</li>
-               <li>AMAZON</li>
-               <li>PIAZZA</li>
-             </ul>
-           </div>
         </div>
+        <div class="container d-flex" id="secondary-charts">
+          <div class="w-50" id="volume-chart">
+          
+          </div>
+          <div class="w-50" id="bags-chart">
+          
+          </div>
+          
+        </div>
+        
+      </div>
+      
     </main>
+    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    <script src="../static/js/home.js"></script>
   </body>
 </html>
