--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -35,8 +35,8 @@
         
 
       </ul>
-      <form class="form-inline my-2 my-lg-0" action="/search" method="POST">
-        <input class="form-control-sm mr-sm-2" type="stock" placeholder="Stock Ticker" aria-label="Search">
+      <form class="form-inline my-2 my-lg-0" action="/search" method="GET">
+        <input class="form-control-sm mr-sm-2" type="stock" name="stock" placeholder="Stock Ticker" aria-label="Search">
         <button class="btn btn-primary my-2 my-sm-0 brown" type="submit">Search</button>
     </form>
 
