--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -1,1 +1,29 @@
 {% include 'navbar.html' %}
+
+<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+
+<main>
+  <div class="container pt-4">
+    <div class="d-flex mb-4">
+      <img src="https://www.freepnglogos.com/uploads/apple-logo-png/apple-logo-png-dallas-shootings-don-add-are-speech-zones-used-4.png" width="32px" height="32px" class="my-auto"/>
+      <h1 class=""> APPLE INC
+      </h1>
+    </div>
+
+    <h5>
+    Apple inc is up 54% from 10/19/23 to 12/12/24
+    </h5>
+    
+    <h5>
+      Avocados are up 43% in the same timeframe
+    </h5>
+    
+    <div id="curve_chart" class="compare-graph mt-5">
+    
+    </div>
+  </div>
+  
+  
+</main>
+
+<script src="../static/js/search.js"></script>
