--- a/app/templates/loginAcc.html
+++ b/app/templates/loginAcc.html
@@ -39,7 +39,7 @@
 
                     <div class="form-outline mb-4">
                         <label class="form-label" for="form2Example27">Password</label>
-                        <input type="text" name="password" placeholder="enter a password" class="form-control form-control-lg" />
+                        <input type="password" name="password" placeholder="enter a password" class="form-control form-control-lg" />
 
                     </div>
 
