avocado higher or lower graph

--- a/app/templates/higherLower.html
+++ b/app/templates/higherLower.html
@@ -22,7 +22,7 @@
       </p>
       <div class="d-inline-flex w-100" style="height: 60vh">
         
-        <div style="background-image: url(https://ih1.redbubble.net/image.2140926795.0280/st,small,845x845-pad,1000x1000,f8f8f8.jpg); background-size: 100%;" class="w-50 d-flex justify-content-center align-items-center images" onclick='whenClicked({{stock|tojson}}, {{avocado_data|tojson}}, {{stock_data|tojson}}, {{location|tojson}}, {{avocado_type|tojson}})'>
+        <div style="background-image: url(https://ih1.redbubble.net/image.2140926795.0280/st,small,845x845-pad,1000x1000,f8f8f8.jpg); background-size: 100%;" class="w-50 d-flex justify-content-center align-items-center images" onclick='whenClicked({{stock|tojson}}, {{avocado_data}}, {{stock_data}}, {{location|tojson}}, {{avocado_type|tojson}})'>
           <h1 class="dark-green">
             {{location}} {{avocado_type}} Avocados
           </h1>
@@ -33,7 +33,7 @@
         <div class="px-3 d-flex justify-content-center align-items-center">
           <img src="https://upload.wikimedia.org/wikipedia/commons/7/70/Street_Fighter_VS_logo.png" width=75px height= 75px/>
         </div>
-        <div style="background-image: url({{logo}}); background-size: 100%;" class="w-50 d-flex justify-content-center align-items-center images" onclick="">
+        <div style="background-image: url({{logo}}); background-size: 100%;" class="w-50 d-flex justify-content-center align-items-center images" onclick='whenClicked({{stock|tojson}}, {{avocado_data}}, {{stock_data}}, {{location|tojson}}, {{avocado_type|tojson}})'>
         
           <h1 class="dark-green">
             {{stock}}
