--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -17,19 +17,22 @@
           Welcome, User
         </h1>
         
+        <!--MAKE VALUES REFLECT URL-->
         <select name="place" id="place">
+          <option value={{loc}}>{{loc}}</option>
           <option value="Houston">Houston</option>
           <option value="New York">New York</option>
         </select>
         
         <select name="convention" id="convention">
-          <option value="Organic">Organic</option>
-          <option value="Non-organic">Non-organic</option>
+          <option value="organic">organic</option>
+          <option value="conventional">non-organic</option>
         </select>
         
         <h2>
           
         </h2>
+        {{loc}} {{avo_type}}
         <div class="container" id="main-chart">
            
         </div>
@@ -44,6 +47,10 @@
         </div>
         
       </div>
+
+      <div style="display: none;" id="avoPrice">{{avoPrice}}</div>
+      <div style="display: none;" id="location">{{loc}}</div>
+      <div style="display: none;" id="avoType">{{avo_type}}</div>
       
     </main>
     
