--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -16,8 +16,12 @@
         <h1>
           Welcome, User
         </h1>
+      
         
-        <!--MAKE VALUES REFLECT URL-->
+        <h2 class="mt-5">
+          {{loc}} {{avo_type}} Avocado Statistics
+        </h2>
+
         <select name="place" id="place">
           <option value={{loc}}>{{loc}}</option>
           <option value="Houston">Houston</option>
@@ -29,10 +33,6 @@
           <option value="conventional">non-organic</option>
         </select>
         
-        <h2>
-          
-        </h2>
-        {{loc}} {{avo_type}}
         <div class="container" id="main-chart">
            
         </div>
