--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -49,7 +49,7 @@
       <div style="display: none;" id="avoPrice">{{avoPrice}}</div>
       <div style="display: none;" id="location">{{loc}}</div>
       <div style="display: none;" id="avoType">{{avo_type}}</div>
-      <!-- <div style="display: none;" id="avoVolume">{{avoVolume}}</div> -->
+      <div style="display: none;" id="avoVolume">{{avoVolume}}</div>
       
     </main>
 
