--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -56,6 +56,7 @@
       <div style="display: none;" id="location">{{loc}}</div>
       <div style="display: none;" id="avoType">{{avo_type}}</div>
       <div style="display: none;" id="avoVolume">{{avoVolume}}</div>
+      <div style="display: none;" id="avoBaggage">{{avoBaggage}}</div>
       
     </main>
 
