--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -29,11 +29,11 @@
           
           <select name="convention" id="convention">
             {% if avo_type == "organic" %}
-              <option value="organic">organic</option>
-              <option value="conventional">non-organic</option>
+              <option value="organic">Organic</option>
+              <option value="conventional">Non-organic</option>
             {% else %}
-              <option value="conventional">non-organic</option>
-              <option value="organic">organic</option>
+              <option value="conventional">Non-organic</option>
+              <option value="organic">Organic</option>
             {% endif %}
           </select>
         
