higher-lower game

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -14,7 +14,7 @@
     <main>
       <div class="container pt-2">
         <h1>
-          Welcome, User
+          Welcome, {{username}}
         </h1>
       
         
