--- a/app/templates/leaderboard.html
+++ b/app/templates/leaderboard.html
@@ -24,7 +24,7 @@
       </tr>
     </thead>
     <tbody>
-      {% for username, wins, losses in data%}
+      {% for username, score in data%}
             <tr>
             <td>{{loop.index}}</td>
             <td>{{username}}</td>
